# Renzoku

./: .cproject  .editorconfig  .gitignore  .gitmodules  .project  .travis.yaml  .travis.yml  LICENSE.catch  LICENSE.header  Makefile  Makefile.am  Makefile.bak  Makefile.in  README.md  builder  builder-session.vim  catch.hpp  config.cpp  config.hpp  configfile.cpp  configfile.hpp  configitem.cpp  configitem.hpp  configure  configure.ac  coverage.sh  i_configfile.hpp  log.cpp  log.hpp  main.cpp  main.hpp  oldwatcher.c  process.cpp  process.hpp  renzoku.conf  renzoku_old.conf  requirements  signals.cpp  signals.hpp  test.conf  (+16 more)
contrib/archlinux/: PKGBUILD
debian/: NEWS  README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  notes  postinst.ex  postrm.ex  preinst.ex  prerm.ex  renzoku.cron.d.ex  renzoku.default.ex  renzoku.doc-base.EX  rules  watch.ex
doc/: Makefile  Makefile.in  README  config.md
examples/: Makefile  Makefile.am  Makefile.in
man/: Makefile  Makefile.am  Makefile.in  renzoku.1  renzoku.conf.5
notes/: index.html  page1.html  page2.html  page3.html  singleton.note  sites
src/: Makefile  Makefile.am  Makefile.in  config.cpp  config.hpp  config_sections.hpp  configfile.cpp  configfile.hpp  exceptions.cpp  exceptions.hpp  i_configfile.hpp  log.cpp  log.hpp  main.cpp  main.hpp  process.cpp  process.hpp  procman.cpp  procman.hpp  signals.cpp  signals.hpp  threadmgr.cpp  threadmgr.hpp  tokenizer.cpp  tokenizer.hpp  util.cpp  util.hpp  watcher.cpp  watcher.hpp
src/config/: Makefile.am  config.hpp  main.cpp  renconf  renzoku.conf  test.conf
src/parser/: Makefile.am  lexicon.cpp  lexicon.hpp  main.cpp  parser.cpp  parser.hpp  test.conf  tokenizer.cpp  tokenizer.hpp
tests/: Makefile  Makefile.am  Makefile.in  globals.hpp  run_tests.sh  test1.cpp  test_config.cpp  test_functional.sh  test_log.cpp  test_main.cpp  test_process.cpp  test_tokenizer.cpp  test_util.cpp
